<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="end|bottom"

        android:src="@drawable/ic_flag_checkered"
        android:contentDescription="@string/new_goal"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true" />

    <ImageButton
        android:id="@+id/center_button"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:padding="1dp"

        android:src="@drawable/ic_menu_mylocation"
        android:background="@color/design_default_color_secondary"
        android:scaleType="fitXY"
        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:animateLayoutChanges="true"
        android:contentDescription="@string/center" />


</androidx.constraintlayout.widget.ConstraintLayout>